--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "mongoose": "^8.13.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "openai": "^5.3.0"
+    "openai": "^5.3.0",
+    "sharp": "^0.34.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
